fix scrollbar and add more option value

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p {
     border: 2px solid #468259 !important;
 }
 
-.swal2-cancel{
+.swal2-cancel {
     border-radius: 5px !important;
     background-color: #181717 !important;
     border: 2px solid #9e4141 !important;
@@ -44,6 +44,11 @@ p {
 
 .swal2-hide {
     animation: hide .15s !important;
+}
+
+.swal2-validation-message {
+    background-color: #181717 !important;
+    color: #FFFFFF !important;
 }
 
 @keyframes show {
@@ -69,6 +74,26 @@ p {
         transform: scale(0.8);
         opacity: 0
     }
+}
+
+/* scroll bar */
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(128, 128, 128);
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: rgb(100, 100, 100);
 }
 
 .topnav {
@@ -311,7 +336,7 @@ tr:last-child td:last-child {
     font-size: 16px;
 }
 
-.setBox{
+.setBox {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -319,7 +344,7 @@ tr:last-child td:last-child {
     width: 90%;
 }
 
-.setBox-title{
+.setBox-title {
     font-size: 20px;
     margin-right: 25px;
 }
